package edu.hitsz.observers;

public interface Observer{

    public void update_bomb();
}


